--- a/my_app/static/styles.css
+++ b/my_app/static/styles.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #246025;
 }
 
 .form-signin {
@@ -41,4 +41,7 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+.color-default {
+  color: #246025;
 }
