--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" >
   </head>
 
-  <body class="text-center">
+  <body class="text-center p-3 mb-2 bg-dark text-white">
     <form action="/contas/login" method="post" class="form-signin">
 
-      <h1 class="h3 mb-3 font-weight-normal">Acesse sua conta agora!</h1>
+      <img src="{{ url_for('static', filename='img/ByteBank.png') }}" alt="Byte Bank, seu banco digital" width="200px" height="180px" style="margin-bottom: 30px" >
+      <h1 class="h3 mb-3 font-weight-normal text-light">Acesse sua conta agora!</h1>
 
       <label for="inputCpf" class="sr-only">CPF</label>
       <input type="text" id="inputCpf" class="form-control" placeholder="Digite seu cpf" name="cpf" required autofocus>
@@ -26,7 +27,7 @@
         </label>
       </div>
 
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+      <button class="btn btn-lg btn-outline-success btn-block" type="submit">Entrar</button>
 
       {% if failed_login %}
         <span><strong><p class="text-danger">CPF ou senha inválidos, verifique e tente novamente mais tarde! :D<p/></strong></span>
