Route dashboard and render saldo

--- a/my_app/templates/dashboard.html
+++ b/my_app/templates/dashboard.html
@@ -101,6 +101,13 @@
               Transferência
             </a>
           </li>
+          <li>
+            <div class="card text-white bg-light border m-2 mt-3" style="max-width: 18rem;border-radius: 20px !important;">
+              <div class="card-body row m-0 rounded">
+                <h6 class="text-dark card-title m-0 lh-100 pr-2">Saldo: </h6> <p class="text-success card-text">{{saldo}} R$</p>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </nav>
